--- a/_config.yml
+++ b/_config.yml
@@ -13,16 +13,16 @@ baseurl: '/online-cv' #change it according to your repository name
 
 
 #Profile information
-name: Alan Doe
+name: Bart(이철민)
 tagline: Full Stack Developer
 pic: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
 #sidebar links
-email: hello@webjeda.com
-phone: 012 345 6789
+email: elfinx@gmail.com
+phone: 123 123 6789
 website: blog.webjeda.com #do not add http://
 linkedin: alandoe
-github: sharu725
-twitter: '@webjeda'
+github: elfinxx
+twitter: '@elfinxx'
 
 #Update all the sections by editing the files inside _includes folder.
