--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ baseurl: '/online-cv' #change it according to your repository name
 #style: styles-4
 #style: styles-5
 #style: styles-6
-
+style: styles-toss
 
 #Profile information
 name: Bart(이철민)
