--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 
-title: My Resume
-url: 'http://webjeda.com'
-baseurl: '/online-cv' #change it according to your repository name
+title: Bart Resume
+url: 'http://bomcat.tistory.com'
+baseurl: '/resume' #change it according to your repository name
 
 
 # Enable one of these styles by removing #. Style will be applied only after restarting the build or serve.
@@ -19,9 +19,8 @@ pic: profile.png  #place a 100x100 picture inside /assets/images/ folder and pro
 
 #sidebar links
 email: elfinx@gmail.com
-phone: 123 123 6789
-website: blog.webjeda.com #do not add http://
-linkedin: alandoe
+website: bomcat.tistory.com #do not add http://
+linkedin: bart-lee
 github: elfinxx
 twitter: '@elfinxx'
 
